feat: added scripts to details & tree views
